orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Deal__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <type>Text</type>
    <length>255</length>
</CustomField>