orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Deal__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability (%)</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>