orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Deal__c/listViews/All_Deals.listView-meta.xml
<ListView>
    <fullName>All_Deals</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Deals</label>
</ListView>